# bachelor-thesis

./: .gitignore  OntologieABox.owl  OntologieJoint.owl  OntologieStartIndividuals.owl  OntologieStartTBox.owl  join_tbox_and_abox.sh  package-lock.json  package.json  readme.md
.github/workflows/: vite-compile.yaml  (+1 more)
publication/: bib.yaml  class_diagram.mmd  ilm.typ  main.typ  readme.md  template.typ
query-by-graph/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
query-by-graph/src/: App.vue  editor.ts  lib.rs  main.ts  notes  store.ts  style.css  utils.ts  vue.config.js
query-by-graph/src/components/: Button.vue  ClipboardButton.vue  CustomConnection.vue  CustomInputControl.vue  CustomNode.vue  EntityNode.vue  EntitySelector.vue  EntitySelectorInputControl.vue  LiteralInputControl.vue  LiteralNode.vue  NetworkVisualiser.vue  PropertyConnection.vue  PropertySelection.vue  QueryButton.vue
query-by-graph/src/lib/constants/: index.ts
query-by-graph/src/lib/highlight/: component.ts  default.css  sparql.js  sparql.ts
query-by-graph/src/lib/rete/: constants.ts  editor.ts
query-by-graph/src/lib/rust/: lib.rs
query-by-graph/src/lib/types/: ConnectionInterfaceType.ts  EntityType.ts  WikibaseDataSource.ts
query-by-graph/src/lib/utils/: counter.ts  index.ts
query-by-graph/src/lib/wikidata/: WikiDataService.ts  WikibaseDataService.ts  dataService.ts  queryDataService.ts  types.ts
query-by-graph/src/types/: EntityType.ts
query-by-graph/tests/: logic.rs  web.rs
