[package]
name = "query-by-graph"
version = "0.1.0"
authors = ["Daniel Motz <hello@daniel-motz.de>"]
description = "Convert Visual Query Graphs to SPARQL queries and vice versa"
repository = "https://github.com/HerrMotz/bachelor-thesis"
license = "All Right Reserved."
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
spargebra = "0.3.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
